public/assets/css/main.css
/* ... */
		@media screen and (max-width: 480px) {

			.main > .content {
				max-width: calc(100% - 1.5em);
			}

		}

/* Footer */

	#footer {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		-moz-justify-content: space-between;
		-webkit-justify-content: space-between;
		-ms-justify-content: space-between;
		justify-content: space-between;
		position: relative;
		margin: 0;
		line-height: 1em;
		padding: 1.5em;
		background: #627a7a;
		color: rgb(245, 248, 250);
		overflow: hidden;
	}

		#footer > * {
			margin-bottom: 0;
		}

		#footer a {
			color: inherit;
		}

			#footer a:hover {
				color: #b9babb;
			}

		#footer ul.menu {
			margin: 0;
		}

			#footer ul.menu li {
				border-left-color: rgba(185, 186, 187, 0.2);
				font-size: 0.9em;
			}

		@media screen and (max-width: 1000px) {

			#footer {
				-moz-flex-direction: column;
				-webkit-flex-direction: column;
				-ms-flex-direction: column;
				flex-direction: column;
				-moz-justify-content: center;
				-webkit-justify-content: center;
				-ms-justify-content: center;
				justify-content: center;
				line-height: 1.5em;
				text-align: center;
				padding: 2em 1em 2em 1em;
			}

				#footer > * {
					margin: 0 0 1em 0;
				}

		}

		@media screen and (max-width: 736px) {

			#footer ul.menu li {
				border-left: none;
				display: block;
				line-height: inherit;
				margin: 0.25em 0 0 0;
				padding: 0.25em 0 0 0;
			}

				#footer ul.menu li:first-child {
					margin-top: 0;
					padding-top: 0;
				}

		}

/* Intro */

	#intro {
		background: linear-gradient(-180deg, rgb(227, 243, 246), rgba(136, 185, 187, 0.685));
		background-size: cover;
		background-attachment: fixed, fixed;
		background-position: top left, bottom center;
		background-repeat: no-repeat;
	}

/* One */

	#one {
		background: url("images/overlay.png"), url("../../images/one.jpg");
		background-size: 256px 256px, cover;
		background-attachment: fixed, fixed;
		background-position: top left, center center;
	}

/* Two */

	#two {
		background: url("images/overlay.png"), url("../../images/two.jpg");
		background-size: 256px 256px, cover;
		background-attachment: fixed, fixed;
		background-position: top left, center center;
	}

/* Contact */

	#contact {
		overflow: hidden;
		margin-top: -70px;
		padding-bottom: 100px;
	}

		#contact .box {
			-moz-transition: -moz-transform 1s ease;
			-webkit-transition: -webkit-transform 1s ease;
			-ms-transition: -ms-transform 1s ease;
			transition: transform 1s ease;
			-moz-transform: translateY(0);
			-webkit-transform: translateY(0);
			-ms-transform: translateY(0);
			transform: translateY(0);
			position: relative;
		}

		#contact.inactive .box {
			-moz-transform: translateY(100%);
			-webkit-transform: translateY(100%);
			-ms-transform: translateY(100%);
			transform: translateY(100%);
		}

		@media screen and (max-width: 736px) {

			#contact .box {
				padding: 1.5em 1.5em 2em 1.5em;
			}

		}

		@media screen and (max-width: 480px) {

			#contact .box {
				padding: 1em 1em 2em 1em;
			}

		}

	/* Current page nav decoration for all pages*/
.pg-index nav > a, .pg-index nav li:first-child, .pg-gallery nav li:nth-child(2), .pg-subscribe nav li:nth-child(3), .pg-admin nav li:nth-child(4) {
  text-decoration: underline;
}

.lifecloud {
	width: 600px;
}

/* style and display of the images */
.gallery {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(30ch, 30ch));
  justify-content: center;
	grid-gap: 1rem;

  max-width: 1600px;
  margin: auto;
}

/* margin and alignment of the figcaption */
.card {
	margin: 0.5em;
	padding: 2rem 1rem;
  text-align: center;
}

